Renamed EFB strings

--- a/Strings/AppResources.bg.resx
+++ b/Strings/AppResources.bg.resx
@@ -506,7 +506,7 @@
     <comment>Sends Position/Attitude/Traffic data to local devices running ForeFlight</comment>
   </data>
   <data name="Settings.General.ForeFlight.Title" xml:space="preserve">
-    <value>Включване на ForeFlight Link</value>
+    <value>Включване на EFB Link</value>
     <comment>Enable ForeFlight Link</comment>
   </data>
   <data name="Settings.General.HideStatusBar.Subtitle" xml:space="preserve">
