--- a/Strings/AppResources.es.resx
+++ b/Strings/AppResources.es.resx
@@ -942,7 +942,7 @@
     <comment>Sends Position/Attitude/Traffic data to local devices running ForeFlight</comment>
   </data>
   <data name="Settings.General.ForeFlight.Title" xml:space="preserve">
-    <value>Activa el link con ForeFlight</value>
+    <value>Activa el link con EFB</value>
     <comment>Enable ForeFlight Link</comment>
   </data>
   <data name="Settings.General.HideStatusBar.Subtitle" xml:space="preserve">
