--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -3231,9 +3231,9 @@ You can quit this session or embark on another journey to a new destination.</co
     <value>ATC NOT AVAILABLE</value>
     <comment>ATC NOT AVAILABLE</comment>
   </data>
-  <data name="WorldModeModalControl.GradeTwoRequired" xml:space="preserve">
-    <value>GRADE 2 REQUIRED</value>
-    <comment>GRADE 2 REQUIRED</comment>
+  <data name="WorldModeModalControl.GradeThreeRequired" xml:space="preserve">
+    <value>GRADE 3 REQUIRED</value>
+    <comment>GRADE 3 REQUIRED</comment>
   </data>
   <data name="WorldModeModalControl.MoreServersUpper" xml:space="preserve">
     <value>MORE
