--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -2776,4 +2776,7 @@ JOUEUR</value>
   <data name="LogbookControl.CouldNotImportReplayStorageError" xml:space="preserve">
     <value>Impossible d'importer le fichier replay. Veuillez vérifier l'espace de stockage disponible.</value>
   </data>
+  <data name="LeaderboardsControl.WeeklyLeaderboardUpper" xml:space="preserve">
+    <value>CLASSEMENT HEBDOMADAIRE</value>
+  </data>
 </root>
