--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -3289,20 +3289,40 @@ PLAYER</comment>
     <value>TAP TO ASSIGN</value>
     <comment>TAP TO ASSIGN</comment>
   </data>
-  <data name="GamePage.AutoSaveUpper" xml:space="preserve">
-    <value>AUTO SAVE</value>
-    <comment>AUTO SAVE</comment>
+  <data name="GamePage.FlightCanBeResumed" xml:space="preserve">
+    <value>This flight can be resumed</value>
+    <comment>This flight can be resumed</comment>
   </data>
-  <data name="GamePage.ConditionsUpper" xml:space="preserve">
-    <value>CONDITIONS</value>
-    <comment>CONDITIONS</comment>
+  <data name="GamePage.FlightCannotBeResumed" xml:space="preserve">
+    <value>This flight cannot be resumed</value>
+    <comment>This flight cannot be resumed</comment>
   </data>
-  <data name="GamePage.FlightNotSavedUpper" xml:space="preserve">
-    <value>FLIGHT NOT SAVED</value>
-    <comment>FLIGHT NOT SAVED</comment>
+  <data name="GamePage.LeaveFlight.Message" xml:space="preserve">
+    <value>Are you sure you want to leave this flight?</value>
+    <comment>Are you sure you want to leave this flight?</comment>
   </data>
-  <data name="GamePage.LastSavedUpper" xml:space="preserve">
-    <value>LAST SAVED</value>
-    <comment>LAST SAVED</comment>
+  <data name="GamePage.FlightResumeIndicatorName" xml:space="preserve">
+    <value>FLIGHT RESUME</value>
+    <comment>FLIGHT RESUME</comment>
+  </data>
+  <data name="GamePage.LeaveFlight.Title" xml:space="preserve">
+    <value>Leave Flight</value>
+    <comment>Leave Flight</comment>
+  </data>
+  <data name="Global.NotSaved" xml:space="preserve">
+    <value>Not Saved</value>
+    <comment>Not Saved</comment>
+  </data>
+  <data name="Global.Off" xml:space="preserve">
+    <value>OFF</value>
+    <comment>OFF</comment>
+  </data>
+  <data name="Global.On" xml:space="preserve">
+    <value>ON</value>
+    <comment>ON</comment>
+  </data>
+  <data name="Global.Saved" xml:space="preserve">
+    <value>Saved</value>
+    <comment>Saved</comment>
   </data>
 </root>
